<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/all_bg_color">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/classroom_tip4"
        android:layout_marginTop="3dp"
        android:padding="3dp"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textColor="@color/classroom_text_color"
            android:paddingLeft="10dp"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="请选择校区:"/>
        <Spinner
            android:layout_margin="2dp"
            android:background="@drawable/spinner_bg"
            android:paddingTop="10dp"
            android:spinnerMode="dialog"
            android:prompt="@string/classroom_tip"
            android:paddingRight="10dp"
            android:layout_weight="1"
            android:id="@+id/person_classroom_spn_xiaoqu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/classroom_xiaoqu"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textColor="@color/classroom_text_color"
            android:paddingLeft="10dp"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="请选择教学楼:"/>
        <Spinner
            android:layout_margin="2dp"
            android:background="@drawable/spinner_bg"
            android:spinnerMode="dialog"
            android:prompt="@string/classroom_tip1"
            android:entries="@array/classroom_selec_tip"
            android:paddingRight="10dp"
            android:layout_weight="1"
            android:id="@+id/person_classroom_spn_build"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Spinner
            android:layout_margin="2dp"
            android:background="@drawable/spinner_bg"
            android:spinnerMode="dialog"
            android:prompt="@string/classroom_tip2"
            android:paddingRight="10dp"
            android:layout_weight="1"
            android:id="@+id/person_classroom_spn_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/classroom_weeks"
            android:layout_gravity="center"
            />

        <Spinner
            android:layout_margin="2dp"
            android:background="@drawable/spinner_bg"
            android:spinnerMode="dialog"
            android:prompt="@string/classroom_tip3"
            android:paddingRight="10dp"
            android:layout_weight="1"
            android:id="@+id/person_classroom_spn_whichweek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/classroom_whichweek"
            android:layout_gravity="center"
            />
    </LinearLayout>
    <Button
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:textColor="@color/classroom_text_color"
        android:background="@drawable/login_btn_bg"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/person_classroom_btn1"
        android:text="查询教室"
        android:onClick="classroom_btn1_click"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/classroom_search_ev"
            android:padding="3dp"
            android:layout_margin="5dp"
            android:background="@drawable/classroom_search_bg"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="请输入关键字进行搜索"/>
        <Button
            android:onClick="classroom_search_btn"
            android:background="@drawable/login_btn_bg"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="搜索教室"
            android:textColor="#000000"/>
    </LinearLayout>
    <ListView
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="4dp"
        android:dividerHeight="0dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/person_classroom_lv1"></ListView>

</LinearLayout>